@@ -91,6 +91,7 @@ class LuaUnsyncedRead {
 		static int GetLosViewColors(lua_State* L);
 
 		static int GetCameraNames(lua_State* L);
+		static int GetCurrentCamera(lua_State* L);
 		static int GetCameraState(lua_State* L);
 		static int GetCameraPosition(lua_State* L);
 		static int GetCameraDirection(lua_State* L);
