@@ -144,6 +144,13 @@ Lua:
  ! Spring.GetTeamInfo: switched the last two return values around (incomeMultiplier is now 7th, customKeys is now 8th)
  - Added a second boolean parameter to Spring.Get{Player,Team}Info, if it is false the function will not return
    the (now) last return value, the customKeys table (allocation optimisation)
+ - Added Spring.GetCurrentCamera, returns the name of the current camera
+ - Added a boolean parameter to Spring.GetCameraState, if set to false it will return the following camera-specific values on the stack:
+     fps, rot -> oldHeight
+     ta -> height, angle, flipped
+     spring -> rx, ry, rz, dist
+     free -> rx, ry, rz, vx, vy, vz, avx, avy, avz
+     ov -> (nil)
 
 AI:
  - reveal unit's captureProgress, buildProgress and paralyzeDamage params through
